# cpp-multi-builder

./: .gitignore  BUILD.md  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.docs/: AZURE.md
.github/workflows/: build.yml
cmake/: general.cmake  packaging.cmake  testing.cmake
config/conan/: win_msvc2022vc142.txt  win_msvc2022vc143.txt
demo/: CMakeLists.txt  build-config.yml  calc.cpp  calc.h  conanfile.py  main.cpp
demo/tests/: CMakeLists.txt  test_calc.cpp
pipeline/: azure-pipeline.yml  build-template.yml
pipeline/createMatrix/: createMatrix.ps1  mergekeys.yml
